# yoiotemae

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: pythonapp.yml
config/: para.config
lib/: sensor1.py  sensor2.py  sensor3.py
tests/: test_sensor1.py  test_yoiotemae.py
yoiotemae/: common.py  main.py
yoiotemae/config/: para.config
yoiotemae/lib/: docomo.py  natureremo.py  raspi.py  sensor.py  sensor1.py  sg90.py
